# aiocrontab

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  README.rst  mypy.ini  pyproject.toml
aiocrontab/: __init__.py  core.py  crontab.py  task.py
tests/: conftest.py  test_aiocrontab.py  test_task.py
