[tool.poetry]
name = "aiocrontab"
version = "0.1.0"
description = "Crontab implementation in asyncio "
authors = ["Bhavesh Praveen <bhavespraveen.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
croniter = "^0.3.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.1.0"
ipython = "^7.14.0"
pytest-asyncio = "^0.12.0"
pre-commit = "^2.4.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

known_first_party = "poetry"
known_third_party = ["croniter", "pytest"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
