[tool.poetry]
name = "aiocrontab"
version = "0.1.2"
description = "Crontab implementation in asyncio "
authors = ["Bhavesh Praveen <bhavespraveen.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
croniter = "6.0.0"
typing_extensions = { python = "~3.12.1" }

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
pre-commit = "^2.4.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
#mypy = "^0.770"
toml = "^0.10.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

known_first_party = "poetry"
known_third_party = ["croniter", "pytest"]


[build-system]
requires = ["poetry==2.1.3"]
build-backend = "poetry.masonry.api"
